<resources>
    <string name="app_name">Chroma Clicker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_key">chroma_clicker_preferences</string>
    <string name="channel_id">chroma_clicker_channel</string>
    <string name="channel_name">Chroma Clicker</string>
    <string name="saves">Saves</string>
    <string name="settings">Settings</string>
    <string name="power">Toggle On/Off</string>
    <string name="play">Pause/Play</string>
    <string name="plus">Plus</string>
    <string name="move">Move</string>
    <string name="check">Check</string>
    <string name="minus">Minus</string>
    <string name="cross">Cross</string>
    <string name="dipper">Color Dipper</string>
    <string name="x_input">X:</string>
    <string name="y_input">Y:</string>
    <string name="color_input">Color:</string>
    <string name="eye">Toggle Visibility</string>
    <string name="default_y">0</string>
    <string name="default_x">0</string>
    <string name="default_color">#000000</string>
    <string name="paste">Paste</string>
    <string name="save">Save</string>
    <string name="save_dialog_title">Name Your Save</string>
    <string name="save_dialog_hint">Name</string>
    <string name="save_dialog_negative">Cancel</string>
    <string name="save_dialog_positive">Save</string>
    <string name="default_selected_save">Selected: None</string>
    <string name="randomized">Randomized</string>
    <string name="apply_settings">Apply</string>
    <string name="click_interval">Click Interval (ms)</string>
    <string name="detection_interval">Detection Interval (ms)</string>
    <string name="circle_radius">Circle Radius (dp)</string>
    <string name="circle_radius_slider">Circle Radius</string>
    <string name="default_click_interval">1000</string>
    <string name="default_detection_interval">5000</string>
    <string name="permission_intro_title">Please grant this app the following permissions, as they are vital to its core functionalities.</string>
    <string name="permission_intro_description">Press Next to Continue</string>
    <string name="overlay_permission">Can Draw Overlays</string>
    <string name="overlay_description">This is used to display simple menus over your other apps, a convenient way to manage and configure this auto-clicker</string>
    <string name="accessibility_permission">Accessibility API</string>
    <string name="accessibility_description">This app uses the accessibility service solely to perform click gestures, an essential part of the auto-clicker. This will not be used to collect nor transmit your data. \n\nBy allowing this app to use the accessibility service, I agree to the <a href="https://sites.google.com/view/chroma-clicker-privacy-policy/home">privacy policy</a></string>
    <string name="projection_permission">Media Projection API</string>
    <string name="projection_description">This app uses the Media Projection API to detect pixel colors on your screen and click accordingly, one of this app\'s distinguishing features</string>
   <string name="action_tutorial">Tutorial</string>
    <string name="tutorial_image">tutorial</string>
    <string name="tutorial_one">
        Welcome! Let\'s get familiar with the home screen.\n
        1: Displays the overlay menu, allowing you to edit and run your auto-clicker\n
        2: Lets you manage your saved clicker layouts\n
        3: Configures this app\'s general settings
    </string>
    <string name="tutorial_two">
        Once you click the power button, you\'ll see this overlay menu. Make sure to keep your phone
        in the same orientation while editing up your clickers and playing the auto-clicker, as
        this will keep your clicker positions aligned with the screen.\n
        1: Pauses and plays this app\'s auto-clicker\n
        2: Adds a new clicker you can freely drag around\n
        3: Removes the latest clicker\n
        4: Saves your clicker positions and their color detectors
    </string>
    <string name="tutorial_three">
        If you tap on a clicker, you\'ll find this menu.\n
        1: Toggle the "pixel dipper". Tapping again will paste the tapped pixel\'s position and color in the fields to the right\n
        2: Adjust your color detector\'s settings, such as its pixel coordinates and target color\n
        3: Remove the selected color detector\n
        4: Add a new color detector
    </string>
    <string name="empty_saves">You have no saved layouts</string>
    <string name="add_detector">Add Color Detector +</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="clicker_menu_title">Color Detectors</string>
    <string name="action_label">action</string>
    <string name="rename_label">rename</string>
    <string name="delete_label">Delete</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="agree">Tap to Allow Access</string>
    <string name="disagree">Don\'t Allow</string>
    <string name="granted">Allowed!</string>
</resources>