<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <ImageButton
        android:id="@+id/dipperButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:padding="15dp"
        android:src="@drawable/dipper"
        android:background="@null"
        android:contentDescription="@string/paste"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:text="@string/x_input"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:labelFor="@id/inputX" />

    <EditText
        android:id="@+id/inputX"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:text="@string/default_x"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:text="@string/y_input"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:labelFor="@id/inputY" />

    <EditText
        android:id="@+id/inputY"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:text="@string/default_y"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:text="@string/color_input"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:labelFor="@id/inputColor" />

    <EditText
        android:id="@+id/inputColor"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="7"
        android:text="@string/default_color"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/crossButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:src="@drawable/cross"
        android:background="@null"
        android:contentDescription="@string/cross"
        android:scaleType="fitCenter" />

</LinearLayout>