<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/dialogTheme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:text="@string/save_dialog_title" />

    <EditText
        android:id="@+id/nameInput"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#888888"
        android:backgroundTint="@color/white"
        android:autofillHints="@null"
        android:hint="@string/save_dialog_hint"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negative"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/save_dialog_negative"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/positive"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/save_dialog_positive"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>