<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/raisin_black"
    android:orientation="vertical"
    android:paddingVertical="5dp">

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_play"
        android:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/plusButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/ic_plus"
        android:background="@null"
        android:contentDescription="@string/plus"
        android:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/minusButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/ic_minus"
        android:background="@null"
        android:contentDescription="@string/minus"
        android:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="5dp"
        android:src="@drawable/ic_file"
        android:background="@null"
        android:contentDescription="@string/save"
        android:scaleType="fitCenter" />

</LinearLayout>