<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@null"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/crossButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cross"
            android:background="@null"
            android:contentDescription="@string/cross"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/dipperButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/dipper"
            android:background="@null"
            android:contentDescription="@string/dipper"
            android:scaleType="fitCenter"
            android:layout_marginStart="10dp" />

        <ImageButton
            android:id="@+id/plusButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/plus"
            android:background="@null"
            android:contentDescription="@string/plus"
            android:scaleType="fitCenter"
            android:layout_marginStart="10dp" />

        <ImageButton
            android:id="@+id/eyeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/eye"
            android:background="@null"
            android:contentDescription="@string/eye"
            android:scaleType="fitCenter"
            android:layout_marginStart="10dp" />

        <ImageButton
            android:id="@+id/checkButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/check"
            android:src="@drawable/check"
            android:scaleType="fitCenter"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detectorForms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>