<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="24sp"
        android:text="@string/save_dialog_title"
        android:paddingHorizontal="5dp" />

    <Spinner
        android:id="@+id/actionDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/nameInput"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#888888"
        android:backgroundTint="@color/white"
        android:autofillHints="@null"
        android:hint="@string/save_dialog_hint"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Spinner
        android:id="@+id/saveDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:background="#1D1D1D" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negative"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/save_dialog_negative"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/positive"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/save_dialog_positive"
            android:textColor="@color/submit_button_color"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>
