<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:contentDescription="@string/check"
        android:src="@drawable/check"
        android:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/plusButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/plus"
        android:background="@null"
        android:contentDescription="@string/plus"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:id="@+id/minusButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/cross"
        android:background="@null"
        android:contentDescription="@string/cross"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp" />

</LinearLayout>