<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainFragment">

    <ImageButton
        android:id="@+id/powerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/power"
        android:contentDescription="@string/power"
        app:layout_constraintBottom_toTopOf="@+id/savesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savesButton"
        style="@style/buttonSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saves"
        android:textAlignment="viewStart"
        android:textSize="28sp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/selectedSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_selected_save"
        android:textSize="18sp"
        android:textColor="#BBBBBB"
        android:background="@null"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/savesButton"
        app:layout_constraintEnd_toEndOf="@+id/savesButton"
        app:layout_constraintStart_toStartOf="@+id/savesButton"
        app:layout_constraintTop_toTopOf="@+id/savesButton"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="viewStart"
        android:textSize="28sp"
        style="@style/buttonSpacing" />

</androidx.constraintlayout.widget.ConstraintLayout>