<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <com.chromaclicker.app.overlay.Circle
        android:id="@+id/circle"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="330dp"
        android:layout_height="285dp"
        android:layout_centerInParent="true"
        android:background="@color/dark_charcoal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/clicker_menu_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:paddingHorizontal="15dp"
            android:paddingTop="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/dark_gray"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detectorForms"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp" />

        <LinearLayout
            android:id="@+id/topSection"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="14sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>